# Yuki-WAF

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: health.py
backend/app/core/: config.py  database.py  kafka_consumer.py  redis.py
backend/app/models/: base.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/layouts/: MainLayout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AiConfig.tsx  AuditLogs.tsx  Dashboard.tsx  Rules.tsx  Settings.tsx
frontend/src/stores/: app.ts
gateway/conf/: nginx.conf
gateway/lua/gateway/: phase_access.lua  phase_init.lua  phase_log.lua
gateway/lua/lib/: kafka_producer.lua
infra/migrations/: 001_init.sql
infra/nginx/: default.conf
